error.log
ProgramExample\HelloWorld.java:6: error: incompatible types: String cannot be converted to int
		int d = "Hello World!";
		        ^
1 error
